--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,6 @@
         "gateway",
         "merchant",
         "omnipay",
-        "pay",
         "payment"
     ],
     "homepage": "https://github.com/siqwell/omnipay-webmoney",
@@ -18,10 +17,6 @@
         }
     },
     "require": {
-        "omnipay/common": "~2.3"
-    },
-    "require-dev": {
-        "omnipay/tests": "~2.0",
-        "satooshi/php-coveralls": "1.0.0"
+        "omnipay/common": "^3.0"
     }
 }
